--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,10 +30,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ybaher/raisin-classification:0307886
+          images: ybaher/raisin-classification   # NO tag here
           tags: |
             latest
-      
+            
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
