--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,7 +30,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ybaher/raisin-classification   # NO tag here
+          images: ybaher/raisin-classification
           tags: |
             latest
             
