Redid dockerfile and conda lock

--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,18 @@ channels:
   - conda-forge
 dependencies:
   - python=3.9
-  - pandas=2.3.1
-  - altair=5.5.0
-  - numpy=2.0.2
   - ipykernel=6.30.1
-  - scikit-learn=1.6.1
-  - matplotlib=3.9.1
   - conda-lock=3.0.4
-  - mamba
-  - conda
-  - pandera
-  - click
-  - quarto
+  # - jupyterlab
+  # - mamba
+  # - conda
+  # - quarto>=1.8
   - pip:
       - ucimlrepo==0.0.7
+      - pandera
+      - pandas==2.3.1
+      - altair==5.5.0
+      - numpy==2.0.2
+      - scikit-learn==1.6.1
+      - matplotlib==3.9.1
+      - click
