updated docker compose, readme, and made a coding edit in data vis script

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - .:/home/jovyan
+      - .:/workplace
     deploy:
       resources:
         limits:
