--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   # - jupyterlab
   # - mamba
   # - conda
-  # - quarto>=1.8
+  - quarto>=1.8
   - pip:
       - ucimlrepo==0.0.7
       - pandera
