--- a/environment.yml
+++ b/environment.yml
@@ -5,9 +5,6 @@ dependencies:
   - python=3.9
   - ipykernel=6.30.1
   - conda-lock=3.0.4
-  # - jupyterlab
-  # - mamba
-  # - conda
   - quarto>=1.8
   - pip:
       - ucimlrepo==0.0.7
@@ -17,8 +14,8 @@ dependencies:
       - numpy==2.0.2
       - scikit-learn==1.6.1
       - matplotlib==3.9.1
-      - click
+      - click==8.3.1
       - jupyterlab==4.5.0
       - vl-convert-python
-      - tabulate
+      - tabulate==0.9.0
       - pytest==8.4.2
